docs/v0.5/_sources/tutorials/index.rst.txt
:orphan:

Tutorials
=========

A gallery of examples that showcase how the :doc:`PhasorPy library <../index>`
can be used to analyze time-resolved and hyperspectral fluorescence images
using the :doc:`../phasor_approach`.

Some tutorials demonstrate the use of the programming interface in general,
while others provide problem-oriented how-to guides for advanced applications.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to using the PhasorPy library.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_phasorpy_introduction_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_phasorpy_introduction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Introduction to PhasorPy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The LFD Workshop FLIM tutorial adapted to PhasorPy.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_phasorpy_lfd_workshop_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_phasorpy_lfd_workshop.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">LFD Workshop FLIM tutorial</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/phasorpy_introduction
   /tutorials/phasorpy_lfd_workshop

Programming interface
---------------------

Tutorials on specific modules, classes, and functions:



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calculate and plot phasor coordinates of FRET donor and acceptor channels.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_fret_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_fret.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Förster Resonance Energy Transfer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Project multi-harmonic phasor coordinates onto principal plane.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_pca_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_pca.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Principal component analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to handling multi-harmonic phasor coordinates.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_multi-harmonic_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_multi-harmonic.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-harmonic phasor coordinates</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to selecting phasor coordinates using cursors.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_cursors_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_cursors.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cursors</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to the phasor_from_lifetime function.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_phasor_from_lifetime_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_phasor_from_lifetime.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Phasor coordinates from lifetimes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to the lifetime_to_signal function.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_lifetime_to_signal_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_lifetime_to_signal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Synthesize signals from lifetimes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Functions for filtering phasor coordinates.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_filtering_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_filtering.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Filter phasor coordinates</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to plotting phasor coordinates.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_phasorplot_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_phasorplot.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Phasor plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to component analysis in phasor space.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_components_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_components.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Component analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Read and write phasor-related data from and to various file formats.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_io_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_api_phasorpy_io.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">File input/output</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Applications
------------

Problem-oriented how-to guides for advanced applications:



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Benchmarks
----------

Tutorials evaluating the performance of the library:



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Benchmark the phasor_from_signal function.">

.. only:: html

  .. image:: /tutorials/benchmarks/images/thumb/sphx_glr_phasorpy_phasor_from_signal_thumb.png
    :alt:

  :ref:`sphx_glr_tutorials_benchmarks_phasorpy_phasor_from_signal.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Benchmark phasor_from_signal</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /tutorials/api/index.rst
   /tutorials/applications/index.rst
   /tutorials/benchmarks/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: tutorials_python.zip </tutorials/tutorials_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: tutorials_jupyter.zip </tutorials/tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
