docs/v0.10/_sources/tutorials/index.rst.txt
:orphan:

Tutorials
=========

A gallery of examples that showcase how the :doc:`PhasorPy library <../index>`
can be used to analyze luminescence lifetime and hyperspectral images using
the :doc:`../phasor_approach`.

Some tutorials demonstrate the use of the programming interface in general,
while others provide problem-oriented how-to guides for advanced applications.


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to using the PhasorPy library.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_phasorpy_introduction_thumb.png
    :alt:

  :doc:`/tutorials/phasorpy_introduction`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Introduction to PhasorPy</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Demonstrate the geometrical interpretation of lifetimes in the phasor plot.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_phasorpy_lifetime_geometry_thumb.png
    :alt:

  :doc:`/tutorials/phasorpy_lifetime_geometry`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Geometrical interpretation of lifetimes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="The LFD Workshop FLIM tutorial adapted to PhasorPy.">

.. only:: html

  .. image:: /tutorials/images/thumb/sphx_glr_phasorpy_lfd_workshop_thumb.png
    :alt:

  :doc:`/tutorials/phasorpy_lfd_workshop`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">LFD Workshop FLIM tutorial</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:

   /tutorials/phasorpy_introduction
   /tutorials/phasorpy_lifetime_geometry
   /tutorials/phasorpy_lfd_workshop

Programming interface
---------------------

Tutorials on specific modules, classes, and functions:


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Read and write phasor-related data from and to various file formats.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_io_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_io`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">File input/output</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to the phasor_from_lifetime function.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_phasor_from_lifetime_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_phasor_from_lifetime`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Phasor coordinates from lifetimes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to handling multi-harmonic phasor coordinates.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_multi_harmonic_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_multi_harmonic`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-harmonic phasor coordinates</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Functions for filtering phasor coordinates.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_filter_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_filter`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Filter phasor coordinates</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to plotting phasor coordinates.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_phasorplot_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_phasorplot`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Phasor plot</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to selecting phasor coordinates using cursors.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_cursor_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_cursor`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Cursors</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to component analysis in phasor space.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_component_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_component`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Component analysis</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Calculate and plot phasor coordinates of FRET donor and acceptor channels.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_fret_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_fret`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Förster resonance energy transfer</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="An introduction to the lifetime_to_signal function.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_lifetime_to_signal_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_lifetime_to_signal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Synthesize signals from lifetimes</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Project multi-harmonic phasor coordinates onto the principal plane.">

.. only:: html

  .. image:: /tutorials/api/images/thumb/sphx_glr_phasorpy_pca_thumb.png
    :alt:

  :doc:`/tutorials/api/phasorpy_pca`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Principal component analysis</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Applications
------------

Problem-oriented how-to guides for advanced applications:


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Spectral unmixing using multi-component analysis in phasor space.">

.. only:: html

  .. image:: /tutorials/applications/images/thumb/sphx_glr_phasorpy_component_fit_thumb.png
    :alt:

  :doc:`/tutorials/applications/phasorpy_component_fit`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multi-component fit</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Estimate FRET efficiencies in an image using a phasor-based model.">

.. only:: html

  .. image:: /tutorials/applications/images/thumb/sphx_glr_phasorpy_fret_efficiency_thumb.png
    :alt:

  :doc:`/tutorials/applications/phasorpy_fret_efficiency`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FRET efficiency image</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Determine absolute NADH concentration using intensity-calibrated phasor FLIM.">

.. only:: html

  .. image:: /tutorials/applications/images/thumb/sphx_glr_phasorpy_nadh_concentration_thumb.png
    :alt:

  :doc:`/tutorials/applications/phasorpy_nadh_concentration`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NADH absolute concentration</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Simultaneous phasor analysis of lifetime and spectral data.">

.. only:: html

  .. image:: /tutorials/applications/images/thumb/sphx_glr_phasorpy_multidimensional_thumb.png
    :alt:

  :doc:`/tutorials/applications/phasorpy_multidimensional`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Multidimensional phasor approach</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Miscellaneous
-------------

Tutorials that do not fit into other categories:


.. raw:: html

  <div id='sg-tag-list' class='sphx-glr-tag-list'></div>


.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Render the PhasorPy logo.">

.. only:: html

  .. image:: /tutorials/misc/images/thumb/sphx_glr_phasorpy_logo_thumb.png
    :alt:

  :doc:`/tutorials/misc/phasorpy_logo`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PhasorPy logo</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Interactive educational applications.">

.. only:: html

  .. image:: /tutorials/misc/images/thumb/sphx_glr_phasorpy_apps_thumb.png
    :alt:

  :doc:`/tutorials/misc/phasorpy_apps`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Interactive apps</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Benchmark the phasor_from_signal function.">

.. only:: html

  .. image:: /tutorials/misc/images/thumb/sphx_glr_phasorpy_phasor_from_signal_thumb.png
    :alt:

  :doc:`/tutorials/misc/phasorpy_phasor_from_signal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Benchmark phasor_from_signal</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /tutorials/api/index.rst
   /tutorials/applications/index.rst
   /tutorials/misc/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: tutorials_python.zip </tutorials/tutorials_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: tutorials_jupyter.zip </tutorials/tutorials_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
